Fixed social-strip spacing

--- a/assets/scss/modular/_cta.scss
+++ b/assets/scss/modular/_cta.scss
@@ -8,13 +8,13 @@
 
 .cta {
 	padding: 3rem 0;
-}
-
-.cta--sell {
-	text-align: center;
 
 	h1 {
 		text-align: left;
 		margin-bottom: 3rem;
 	}
+}
+
+.cta--sell {
+
 }
